# contribution_weighted_voting_cdk_rs

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/: contribution_weighted_voting_cdk_rs.did  lib.rs
src/contribution_weighted_voting_cdk_rs_backend/: Cargo.toml
src/contribution_weighted_voting_cdk_rs_frontend/src/: index.html  index.js
test/: setup_suite.bash  teardown_suite.bash  test_contribution_weighted_voting_cdk_rs.bats
