[package]
name = "contribution_weighted_voting_cdk_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
serde = "1.0.185"

[dependencies.chrono]
version = "0.4.26"
default-features = false
